--- a/project/4.css
+++ b/project/4.css
@@ -1,8 +1,8 @@
 .a1{
     border: black solid 2px ;
     width: 98%;
-    height: 360px;
+    height: 630px;
     background-color: lightblue;
     padding-left: 20px;
-
+    color: white;
 }
